modified:   package-lock.json 	modified:   package.json 	modified:   src/App.tsx 	new file:   src/Root/Pages/ExportPage.tsx 	modified:   src/Root/Pages/NewEvent.tsx 	modified:   src/Root/Pages/PastEvents.tsx 	modified:   src/globals.css 	modified:   yarn.lock

--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@mui/base": "^5.0.0-beta.37",
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
+    "@mui/x-data-grid": "^6.19.6",
+    "@mui/x-data-grid-generator": "^6.19.6",
     "@mui/x-date-pickers": "^6.19.5",
     "dayjs": "^1.11.10",
+    "material-ui-search-bar": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-button": "^0.7.2",
