--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/x-data-grid": "^6.19.6",
     "@mui/x-data-grid-generator": "^6.19.6",
     "@mui/x-date-pickers": "^6.19.5",
+    "axios": "^1.6.7",
     "dayjs": "^1.11.10",
     "material-ui-search-bar": "^1.0.1",
     "react": "^18.2.0",
